# agri_navigation_ros1

./: .gitignore  README.md
Utils/assign_goals/: CMakeLists.txt
Utils/hardware_utils/: CMakeLists.txt  package.xml
Utils/hardware_utils/cfg/: PID.cfg
Utils/hardware_utils/include/: hard_mavros_bridge.h
Utils/hardware_utils/launch/: .duckey_core.launch.swp  ap_gcs.launch  d435.launch  duckey.launch  duckey_calib.launch  duckey_core.launch  duckey_core_low_reso.launch  fcu_comm.launch
Utils/hardware_utils/scripts/: cmd_cli.py  cmd_cli_legacy.py  demo_manager.py  external_nav_test.py  gpio_test.py  gps_spy.py  lcm_cmd_cli.py  mavparam.py  motor_control.py  plot_profile.py  pwm_test.py
Utils/hardware_utils/src/: callbacks_bridge.cpp  gpio_bridge.cpp  hard_mavros_bridge.cpp  hard_mavros_bridge_core.cpp  hard_mavros_bridge_legacy.cpp  params_bridge.cpp  utils_bridge.cpp  visual_bridge.cpp
Utils/hardware_utils/srv/: RotateMotor.srv
Utils/manual_take_over/: CMakeLists.txt
Utils/moving_obstacles/: CMakeLists.txt
Utils/moving_obstacles/src/: moving_obstacles.cpp
Utils/odom_visualization/: CMakeLists.txt
Utils/odom_visualization/src/: odom_visualization.cpp
Utils/pose_utils/: CMakeLists.txt
Utils/quadrotor_msgs/: CMakeLists.txt
Utils/quadrotor_msgs/msg/: Ball.msg  TrackingPose.msg
Utils/quadrotor_msgs/srv/: UpdateMode.srv
Utils/random_goals/: CMakeLists.txt
Utils/rviz_plugins/: CMakeLists.txt
Utils/rviz_plugins/src/: goal_tool.cpp  goal_tool.h
Utils/uav_utils/: CMakeLists.txt
Utils/visualization_bridge/: CMakeLists.txt  package.xml
Utils/visualization_bridge/scripts/: listener.py
Utils/visualization_bridge/src/: sensor_visualization.cpp  visualization_bridge.cpp
config/: pybullet_config.yaml
models/drone_0_with_realsense/: model.sdf
planner/drone_detect/include/drone_detector/: drone_detector.h
planner/drone_detect/src/: drone_detector.cpp
planner/path_searching/include/path_searching/: dyn_a_star.h
planner/path_searching/src/: dyn_a_star.cpp
planner/plan_env/: CMakeLists.txt  package.xml
planner/plan_env/cfg/: GridMap.cfg
planner/plan_env/include/plan_env/: grid_map.h  grid_map_bigmap.h
planner/plan_env/src/: grid_map.cpp  grid_map_bigmap.cpp
planner/plan_manage/: CMakeLists.txt  package.xml
planner/plan_manage/include/plan_manage/: ego_replan_fsm.h  planner_manager.h  traj_server.h
planner/plan_manage/launch/: bringup_with_gazebo.launch  crazyflie_demo.launch  mavros_demo.launch  pybullet_demo.launch  single_drone_interactive.launch  swarm.launch  traj_server.launch
planner/plan_manage/launch/include/: advanced_param.xml  default.rviz  demo.rviz  mavros.rviz  proto.rviz  run_in_demo.xml  run_in_mavros.xml  run_in_pybullet.xml  run_in_sim.xml  simulator.xml
planner/plan_manage/src/: ego_replan_fsm.cpp  planner_manager.cpp  traj_server.cpp  traj_server_backup.cpp  traj_server_callbacks.cpp  traj_server_mavros.cpp  traj_server_mavros_legacy.cpp  traj_server_publishers.cpp  traj_server_utils.cpp
planner/swarm_bridge/: CMakeLists.txt  package.xml
planner/traj_opt/: CMakeLists.txt
planner/traj_opt/include/optimizer/: poly_traj_optimizer.h
planner/traj_opt/src/: poly_traj_optimizer.cpp
planner/traj_utils/: CMakeLists.txt
planner/traj_utils/include/traj_utils/: planning_visualization.h
planner/traj_utils/msg/: MINCOTraj.msg  TrackingPose.msg
planner/traj_utils/src/: planning_visualization.cpp
uav_simulator/fake_drone/: CMakeLists.txt  package.xml
uav_simulator/fake_drone/src/: poscmd_2_odom.cpp
uav_simulator/local_sensing/: CMakeLists.txt
uav_simulator/map_generator/: CMakeLists.txt
uav_simulator/map_generator/src/: lidar_sensing.cpp
uav_simulator/pybullet_simulator/: CMakeLists.txt  package.xml  setup.py
uav_simulator/pybullet_simulator/scripts/: pybullet_server.py
uav_simulator/pybullet_simulator/src/pkg/gym_pybullet_drones/control/: BaseControl.py
uav_simulator/pybullet_simulator/src/pkg/gym_pybullet_drones/envs/: BaseAviary.py  CtrlAviary.py
uav_simulator/pybullet_simulator/src/pkg/gym_pybullet_drones/examples/: pid.py  simulator.py
uav_simulator/so3_control/: CMakeLists.txt
uav_simulator/so3_quadrotor_simulator/: CMakeLists.txt
